Change transaction's category to uncategorized when category is deleted

--- a/templates/categories/delete.html
+++ b/templates/categories/delete.html
@@ -23,6 +23,7 @@
         <div class="col-md-offset-4 col-md-8">
 
             <p class="lead">Are you sure, you want to delete category <strong>{{ category.name }}</strong> ?</p>
+            <p class="text-muted">Note: All the transactions in this category will be changed to <code>Uncategorized</code></p>
 
             <form method="POST" class="form-horizontal">
 
