--- a/templates/pagination_snippet.html
+++ b/templates/pagination_snippet.html
@@ -1,3 +1,5 @@
+{% load templatehelpers %}
+
 {% if rows.has_other_pages %}
     <ul class="pagination">
         {% if rows.has_previous %}
@@ -9,7 +11,7 @@
             {% if rows.number == i %}
                 <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
             {% else %}
-                <li><a href="?page={{ i }}">{{ i }}</a></li>
+                <li><a href="{% relative_url i 'page' request.GET.urlencode %}">{{ i }}</a></li>
             {% endif %}
         {% endfor %}
         {% if rows.has_next %}
