--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -24,7 +24,7 @@
         <div class="col-md-12">
             <div class="panel panel-success">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Transactions According To Month</h3>
+                    <h3 class="panel-title">Transactions according to month for year {% now 'Y' %}</h3>
                 </div>
                 <div class="panel-body">
                     <div id="transactions_bar_chart"></div>
