--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -21,13 +21,35 @@
 
     <div class="row">
 
-        <div class="col-md-12">
+        <div class="col-md-6">
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <h3 class="panel-title">Transactions according to month for year {% now 'Y' %}</h3>
                 </div>
                 <div class="panel-body">
                     <div id="transactions_bar_chart"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Expense for year {% now 'Y' %}</h3>
+                </div>
+                <div class="panel-body">
+                    <div id="transactions_expense_pie_chart"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="panel panel-success">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Income for year {% now 'Y' %}</h3>
+                </div>
+                <div class="panel-body">
+                    <div id="transactions_income_pie_chart"></div>
                 </div>
             </div>
         </div>
@@ -47,7 +69,7 @@
         $(function () {
 
             // bar chart
-            var barChart = Highcharts.chart('transactions_bar_chart', {
+            Highcharts.chart('transactions_bar_chart', {
                 chart: {
                     type: 'column'
                 },
@@ -68,6 +90,70 @@
                     pointFormat: '<span>{series.name}</span>: <b>Rs. {point.y:.2f}</b><br/>'
                 },
                 series: {{ bar_chart_series | safe}}
+            });
+
+            // expense pie chart
+            Highcharts.chart('transactions_expense_pie_chart', {
+                chart: {
+                    plotBackgroundColor: null,
+                    plotBorderWidth: null,
+                    plotShadow: false,
+                    type: 'pie'
+                },
+                credits: false,
+                title: {
+                    text: 'Expenses'
+                },
+                tooltip: {
+                    pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+                },
+                plotOptions: {
+                    pie: {
+                        allowPointSelect: true,
+                        cursor: 'pointer',
+                        dataLabels: {
+                            enabled: false
+                        },
+                        showInLegend: true
+                    }
+                },
+                series: [{
+                    name: 'Expenses',
+                    colorByPoint: true
+                    data: {{ pie_chart_expense_series | safe }}
+                }]
+            });
+
+            // income pie chart
+            Highcharts.chart('transactions_income_pie_chart', {
+                chart: {
+                    plotBackgroundColor: null,
+                    plotBorderWidth: null,
+                    plotShadow: false,
+                    type: 'pie'
+                },
+                credits: false,
+                title: {
+                    text: 'Incomes'
+                },
+                tooltip: {
+                    pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+                },
+                plotOptions: {
+                    pie: {
+                        allowPointSelect: true,
+                        cursor: 'pointer',
+                        dataLabels: {
+                            enabled: false,
+                        },
+                        showInLegend: true
+                    }
+                },
+                series: [{
+                    name: 'Income',
+                    colorByPoint: true,
+                    data: {{ pie_chart_income_series | safe }}
+                }]
             });
         });
     </script>
