Fixed piechart issue

--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -119,7 +119,7 @@
                 },
                 series: [{
                     name: 'Expenses',
-                    colorByPoint: true
+                    colorByPoint: true,
                     data: {{ pie_chart_expense_series | safe }}
                 }]
             });
