--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -14,6 +14,24 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-dismissible alert-{{ message.tags }}">
+                        <button type="button" class="close" data-dismiss="alert">×</button>
+                        <p>{{ message }}</p>
+                    </div>
+                {% endfor %}
+            {% endif %}
+
+            {% if not user.is_confirmed %}
+                <div class="alert alert-dismissible alert-warning">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <p>
+                        Email not confirmed. Please confirm your account by clicking on the activation link sent to your email.
+                        <a href="{% url 'dashboard' %}?resend_confirmation_email=True" class="btn btn-success btn-sm">Resend</a>
+                    </p>
+                </div>
+            {% endif %}
             <h3>Dashboard</h3>
             <hr>
         </div>
@@ -22,7 +40,7 @@
     <div class="row">
 
         <div class="col-md-6">
-            <div class="panel panel-success">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">Transactions according to month for year {% now 'Y' %}</h3>
                 </div>
@@ -33,7 +51,7 @@
         </div>
 
         <div class="col-md-3">
-            <div class="panel panel-success">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">Expense for year {% now 'Y' %}</h3>
                 </div>
@@ -44,7 +62,7 @@
         </div>
 
         <div class="col-md-3">
-            <div class="panel panel-success">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">Income for year {% now 'Y' %}</h3>
                 </div>
