--- a/templates/users/profile_edit.html
+++ b/templates/users/profile_edit.html
@@ -1,35 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block head_title %}Create Transaction{% endblock %}
-
-{% block stylesheet %}
-    {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="{% static 'bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css' %}"/>
-{% endblock %}
-
-{% block bodyclass %}{{ block.super }} page-transaction-create{% endblock %}
+{% block head_title %}Edit Profile{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
 
     <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-
-            <h3>Create Transaction</h3>
+        <div class="col-md-12">
+            <h3>Edit Profile</h3>
             <hr>
+        </div>
+    </div>
 
-            {% if messages %}
+    {% if messages %}
+        <div class="row">
+            <div class="col-md-offset-3 col-md-6">
                 {% for message in messages %}
                     <div class="alert alert-dismissible alert-{{ message.tags }}">
                         <button type="button" class="close" data-dismiss="alert">×</button>
                         <p>{{ message }}</p>
                     </div>
                 {% endfor %}
-            {% endif %}
-
+            </div>
         </div>
-    </div>
+    {% endif %}
 
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
@@ -68,7 +63,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-3 col-md-2">
-                        <button type="submit" name="submit" class="btn btn-primary btn-block">Add</button>
+                        <button type="submit" name="submit" class="btn btn-primary btn-block">Update</button>
                     </div>
                 </div>
 
@@ -79,19 +74,3 @@
 </div>
 {% endblock %}
 
-{% block javascript %}
-    {{ block.super }}
-    <script src="{% static 'bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
-    <script>
-        $(document).ready(function() {
-             var datepickerOptions = {
-                format: 'yyyy-mm-dd',
-                autoclose: true,
-                todayBtn: 'linked',
-                keyboardNavigation: false,
-            };
-
-            $("#id_transaction_date").datepicker(datepickerOptions);
-        });
-    </script>
-{% endblock %}
